# ColDaw_lab

./: .dockerignore  .env.example  .env.zoho.example  .gitignore  .railwayignore  AUTHENTICATION_FIXES.md  CARD_ANIMATION_FEATURES.md  CLEANUP_REPORT.md  CLIP_STYLING_UPDATE.md  CODEBASE_CLEANUP.md  CODE_IMPROVEMENT_GUIDE.md  CONTRIBUTING.md  DATABASE_FOREIGN_KEY_FIX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT.md  Dockerfile  FILE_MANIFEST.md  FIX_FOREIGN_KEY_CONSTRAINT.md  FIX_HOMEPAGE_ISSUES.md  FIX_LOGIN_ISSUE.md  FIX_SUMMARY.md  FRONTEND_ENV_CONFIG.md  GET_STARTED_NOW.md  GRADIENT_ANIMATION.md  HOMEPAGE_FIXES.md  HOW_TO_FIX.md  LANDING_PAGE_OPTIMIZATION.md  LICENSE  MAILGUN_SETUP.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  POSTGRESQL_MIGRATION_COMPLETE.md  POSTGRESQL_MIGRATION_STATUS.md  PROJECT_FINAL_STATUS.md  PROJECT_OPTIMIZATION_SUMMARY.md  PUSH_FIX_GUIDE.md  QUICKSTART.md  QUICK_FIX_DATABASE.md  QUICK_REFERENCE.md  (+51 more)
client/: .env.example  index.html  package-lock.json  package.json  test.html  vite.config.ts
client/public/: manifest.json  sw.js
client/src/: App.tsx
client/src/api/: api.ts
client/src/components/: ArrangementView.tsx  AuthModal.tsx  CollaboratorCursors.tsx  ConverterModule.tsx  ExportFormatSelector.tsx  GradientLoadingEffect.tsx  MenuBar.tsx  ProjectThumbnail.tsx  ProtectedRoute.tsx  Timeline.tsx  TrackList.tsx  VersionHistory.tsx
client/src/contexts/: AuthContext.tsx  ModalContext.tsx
client/src/pages/: AccountPage.tsx  DocumentationPage.tsx  EditorPage.tsx  HomePage.tsx  LandingPage.tsx  LandingPage_backup.tsx  ProjectPage.tsx  ThankYouPage.tsx  WaitlistPage.tsx
client/src/store/: useStore.ts
client/src/styles/: global.css  theme.ts
client/src/utils/: logger.ts  (+1 more)
docs/: API.md  BRIDGING.md  CLIENT.md  DATA.md  DEPLOYMENT_CHECKLIST.md  LANDING_PAGE.md  MAILGUN_VS_ZOHO.md  PERSISTENT_STORAGE.md  PROJECT_OVERVIEW.md  RAILWAY.md  RAILWAY_DEPLOYMENT.md  README_CN.md  SERVER.md  VST.md  VST_FETCH_PREVIEW.md  VST_PLUGIN.md  ZEPTOMAIL.md  ZOHO_MIGRATION.md  ZOHO_QUICK_REFERENCE.md
server/: .gitignore  package-lock.json  package.json  test-als.als
server/src/: index.ts
vst-plugin/: .gitignore  ARCHITECTURE.md  AUTHENTICATION.md  BUGFIX_401.md  BUILD_GUIDE.md  CMakeLists.txt  FIX_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_LOGIN.md  USAGE_GUIDE.md  VST_LOGIN_FIX.md  build.sh  rebuild.sh
vst-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+14 files in other folders)
